--- a/CreativeStudio.html
+++ b/CreativeStudio.html
@@ -110,7 +110,7 @@
 
 <div class="row">
   <div class="col-md-4">
-  <h4 > &rarr; ABOUT US</h4>
+  <h4 > &rarr; Git</h4>
   <hr/>
   <p>Lorem ipsum dolor sit amet, sapien curabitur vehicula praesent eget id, ut lacus. Consequat tincidunt, velit neque, pellentesque ut justo, phasellus amet vitae. Luctus eget nulla ante consectetuer. 
   </p>
@@ -118,7 +118,7 @@
 
 
   <div class="col-md-4">
-  <h4>&rarr; OUR BENEFITS</h4>
+  <h4>&rarr; Git</h4>
   <hr/>
   <p>Lorem ipsum dolor sit amet, sapien curabitur vehicula praesent eget id, ut lacus. Consequat tincidunt, velit neque, pellentesque ut justo, phasellus amet vitae. Luctus eget nulla ante consectetuer. 
   </p>
