--- a/CreativeStudio.html
+++ b/CreativeStudio.html
@@ -110,7 +110,7 @@
 
 <div class="row">
   <div class="col-md-4">
-  <h4 > &rarr; PORTFOLIO</h4>
+  <h4 > &rarr; BUMP</h4>
   <hr/>
   <p>Lorem ipsum dolor sit amet, sapien curabitur vehicula praesent eget id, ut lacus. Consequat tincidunt, velit neque, pellentesque ut justo, phasellus amet vitae. Luctus eget nulla ante consectetuer. 
   </p>
